# ai-news

./: .gitattributes  .gitignore  .secrets.example  AGENTS.md  AUTO_PUSH.md  README.md  pyproject.toml  requirements.txt  中文源扩展_汇报_2026-06-13.md  汇报方式.md
config/: channels.json  inspector.yaml
decision/: cli_v238_main_argv_0620.md  cli_v239_wecom_bare_url_0620.md
docs/: data-published-schema.md  log_schema.md
scripts/: __init__.py  cli.py  news-commit.sh  news_commit.py  pm_inspect.sh  probe.py  published_record.py  push_daily_to_feishu.sh  push_report.py  push_report.sh  run_generate_daily.sh
scripts/crawlers/: README.md  __init__.py  _utils.py  crawl_36kr.py  crawl_deepmind.py  crawl_github_trending.py  crawl_huggingface.py  crawl_jiqizhixin.py  crawl_langchain.py  crawl_openai.py  crawl_qbitai.py  crawl_replicate.py  crawl_runway.py  run_all.py
scripts/generators/: README.md  __init__.py  _daily_payload.py  _llm.py  _utils_gen.py  generate_daily.py  generate_inspection.py  generate_weekly.py
scripts/renderers/: __init__.py  feishu_docx.py  markdown.py  wecom_markdown.py
模板/: 每周汇总模板.md  每日资讯模板.md
每周汇总/: 2026-W24.md  2026-W25.md
每日资讯/: 2026-06-11.md  2026-06-12.md  2026-06-13.md  2026-06-14.md  2026-06-15.md  2026-06-16.md  2026-06-17.md  2026-06-18.md  2026-06-19.md  2026-06-20.md  2026-06-21.md  2026-06-22.md  2026-06-23.md  2026-06-24.md
资讯源管理/: README.md  源清单.md
资讯源管理/已对接/: Agent_LangChain-Blog.md  创投_36Kr.md  数字人_Replicate-Blog.md  资讯_机器之心.md  资讯_量子位.md
资讯源管理/待对接/: Agent_GitHub-Trending.md  Agent_LangChain-Blog.md  LLM_DeepMind-Blog.md  (+4 more)
(+151 files in other folders)
